<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Play Stopper</string>
    <string name="action_settings">Settings</string>
    <string name="timeDisplay">Enter a time</string>
    <string name="button_left">Reset</string>
    <string name="button_right">Start</string>
    <string name="secondsText">Seconds:</string>
    <string name="minutesText">Minutes:</string>
    <string name="hoursText">Hours:</string>

</resources>
